--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  FUNCTION_APP_NAME: myfirstfunctionapp-fa
+  FUNCTION_APP_NAME: myfirstfunctionapp-fa-ab
   LOCATION: westeurope
   RESOURCE_GROUP_NAME: myfirstfunction-rg
   STORAGE_ACCOUNT_NAME: myfirstfunctionstab
