update function app name

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  FUNCTION_APP_NAME: myfirstfunctionapp-fa
+  FUNCTION_APP_NAME: myfirstfunctionapp-fa-ab
   FUNCTION_APP_PACKAGE_PATH: '/src/MyFirstAzureFunction'
   RESOURCE_GROUP_NAME: myfirstfunction-rg
   DOTNET_VERSION: '3.1.404'
